--- a/packages/build-scripts/package.json
+++ b/packages/build-scripts/package.json
@@ -15,7 +15,7 @@
     "typecheck": "tsc --noEmit -p ./src/tsconfig.esm.json"
   },
   "devDependencies": {
-    "@storybook/react": "^6.3.12",
+    "@storybook/react": "^6.4.14",
     "@ui-tools/common": "^1.6.2"
   },
   "engines": {
@@ -27,7 +27,7 @@
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.12.13",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.0",
@@ -49,14 +49,15 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-rename-import": "^2.3.0",
     "babel-preset-react-app": "^10.0.0",
+    "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "chalk": "^4.1.0",
-    "circular-dependency-plugin": "5.2.2",
-    "compression-webpack-plugin": "^7.1.2",
+    "circular-dependency-plugin": "^5.2.2",
+    "compression-webpack-plugin": "^9.2.0",
     "copy-webpack-plugin": "^10.0.0",
     "core-js": "^3.9.1",
     "cross-spawn": "^7.0.3",
-    "css-loader": "^6.2.0",
-    "css-minimizer-webpack-plugin": "^3.0.2",
+    "css-loader": "^6.5.1",
+    "css-minimizer-webpack-plugin": "^3.4.1",
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
     "eslint": "^7.31.0",
@@ -80,7 +81,7 @@
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^9.0.0",
     "gulp-sass": "^4.1.0",
-    "html-webpack-plugin": "^5.3.2",
+    "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "img-loader": "^3.0.2",
     "jest": "^26.6.3",
@@ -104,26 +105,26 @@
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.3.2",
-    "react-app-polyfill": "^2.0.0",
-    "react-dev-utils": "^11.0.4",
-    "react-refresh": "^0.10.0",
-    "react-refresh-typescript": "^2.0.2",
+    "react-app-polyfill": "^3.0.0",
+    "react-dev-utils": "^12.0.0",
+    "react-refresh": "^0.11.0",
+    "react-refresh-typescript": "^2.0.3",
     "regenerator-runtime": "0.13.7",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "rimraf": "^3.0.2",
-    "sass-loader": "^12.1.0",
+    "sass-loader": "^12.3.0",
     "source-map-loader": "2.0.0",
-    "style-loader": "^3.1.0",
+    "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.2.4",
     "through2": "^4.0.2",
-    "webpack": "^5.60.0",
+    "webpack": "^5.67.0",
     "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.5.0",
-    "webpack-manifest-plugin": "3.2.0",
-    "webpack-merge": "^5.8.0",
-    "workbox-webpack-plugin": "^6.3.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.3",
+    "webpack-manifest-plugin": "^4.1.1",
+    "webpack-merge": "~5.8.0",
+    "workbox-webpack-plugin": "^6.4.1",
     "yargs": "^16.2.0"
   },
   "files": [
