--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -18,21 +18,20 @@
     "typecheck": "tsc --noEmit -p ./src/tsconfig.esm.json"
   },
   "dependencies": {
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.3.12",
-    "@storybook/addon-essentials": "^6.3.12",
-    "@storybook/addon-links": "^6.3.12",
-    "@storybook/builder-webpack5": "^6.3.12",
-    "@storybook/manager-webpack5": "^6.3.12",
-    "@storybook/react": "^6.3.12",
-    "@storybook/theming": "^6.3.12",
+    "@storybook/addon-actions": "^6.4.14",
+    "@storybook/addon-essentials": "^6.4.14",
+    "@storybook/addon-links": "^6.4.14",
+    "@storybook/builder-webpack5": "^6.4.14",
+    "@storybook/manager-webpack5": "^6.4.14",
+    "@storybook/react": "^6.4.14",
+    "@storybook/theming": "^6.4.14",
     "@ui-tools/build-scripts": "^1.11.2",
     "@ui-tools/components": "^1.25.1",
-    "http-server": "^0.12.3",
-    "mini-css-extract-plugin": "^2.4.5"
+    "http-server": "^0.12.3"
   },
   "resolutions": {
     "webpack": "^5.60.0"
